# Aura

./: .gitignore  aura  install.sh  pyproject.toml
.aura/: adaptive_thresholds.json  adaptive_weights.json  brand_config.json  readiness_state.json
.aura/bridge/: adaptive_thresholds.json  outcome_signal.json.bak.1  outcome_signal.json.bak.2  outcome_signal.json.bak.3  readiness_state.json
.claude/: CLAUDE.md  settings.json
.claude/ralph/: prd_aura_phase1.json  prd_aura_phase10.json  prd_aura_phase11.json  prd_aura_phase12.json  prd_aura_phase13.json  prd_aura_phase14.json  prd_aura_phase15.json  prd_aura_phase16.json  prd_aura_phase17.json  prd_aura_phase18.json  prd_aura_phase2.json  (+9 more)
bug_reports/: aura_bug_report_2026-03-24_1313.md  aura_bug_report_2026-03-24_1756.md  aura_bug_report_2026-03-24_FOLLOWUP.md  aura_bug_report_2026-03-25_0047.md  aura_bug_report_2026-03-25_0811.md  aura_bug_report_2026-03-26_0011.md
tests/: test_aura_bridge.py  test_aura_companion_commands.py  test_aura_config.py  test_aura_conversation.py  test_aura_hardening.py  test_aura_integration_gaps.py  test_aura_override_prediction.py  test_aura_patterns.py  test_aura_persistence.py  test_aura_phase10.py  test_aura_phase11.py  test_aura_phase12.py  test_aura_phase13.py  test_aura_phase14.py  test_aura_phase15.py  test_aura_phase16.py  test_aura_phase17.py  test_aura_phase18.py  test_aura_phase19.py  test_aura_phase20.py  test_aura_phase9.py  test_aura_prediction.py  test_aura_readiness.py  test_aura_self_model.py  test_aura_semantic_signals.py  test_evolution_dsl.py  test_evolution_search.py
(+62 files in other folders)
